--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: tomonori0610
+  password: <%= ENV['MySQL_PW']%>
   socket: /tmp/mysql.sock
 
 development:
